@@ -1,4 +1,9 @@
-* What is new in gsl-2.2.1:
+* What is new in gsl-2.3:
+
+** optimize dogleg methods to calculate Gauss-Newton point
+   only when needed
+
+* What was new in gsl-2.2.1:
 
 ** reverted gsl_linalg_cholesky_decomp to its previous behavior
    so it is backward compatible; new cholesky routine is
